# idpportal

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION.md  LICENSE  Makefile  README.md  config.yaml  docker-compose.dev.yaml  docker-compose.yaml
.github/workflows/: ci-backend.yaml  ci-policy-agent.yaml  (+5 more)
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: base.py  registry.py  supervisor.py
backend/app/agents/argocd/: agent.py  tools.py
backend/app/agents/backstage/: agent.py  tools.py
backend/app/agents/flux/: agent.py  tools.py
backend/app/agents/github/: agent.py  tools.py
backend/app/agents/jira/: agent.py  tools.py
backend/app/agents/kafka/: agent.py  tools.py
backend/app/agents/kubernetes/: __init__.py  agent.py  tools.py
backend/app/agents/pagerduty/: agent.py  tools.py
backend/app/agents/policy/: agent.py  tools.py
backend/app/agents/rancher/: agent.py  tools.py
backend/app/agents/slack/: agent.py  tools.py
backend/app/agents/vault/: agent.py  tools.py
backend/app/api/: deps.py
backend/app/api/v1/: agents.py  chat.py  health.py  router.py  selfservice.py
backend/app/schemas/: chat.py
backend/app/services/: auth.py  database.py  llm.py
backend/app/utils/: logging.py
backend/tests/test_api/: test_health.py
infrastructure/: backend.tf  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
policies/: README.md
policy-agent/: Dockerfile  Makefile  go.mod
scripts/: bootstrap.sh
ui/: Dockerfile  next.config.ts  package.json
(+59 files in other folders)
